tests/samples/invalid/missing_semicolon_block.pn
fn main()
{
	var x = 10
	{
		loop;
	}
}
